fixes chat username overlap

--- a/client/css/chat.css
+++ b/client/css/chat.css
@@ -86,6 +86,10 @@ section.chat {
 	margin-right: 0px;
 }
 
+.chat-timecode:not(.mine) + .speakingturn:not(.mine) {
+	margin-top: 0;
+}
+
 span.chatline {
 	clear: both;
 	float: left;
